<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cowritecar"
    android:orientation="vertical"
    tools:context=".Register">


    <TextView
        android:id="@+id/txtmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/d"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_full_name"
        android:padding="15sp"
        android:textColor="@color/cart_button"
        android:textColorHint="@color/cart_button"
        android:textSize="14sp"
        android:textStyle="italic"
        android:inputType="text"
        android:autofillHints="" tools:targetApi="o"/>


    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_correct_email"
        android:inputType="textEmailAddress"
        android:padding="15sp"
        android:textColor="@color/cart_button"
        android:textColorHint="@color/cart_button"
        android:textSize="14sp"
        android:textStyle="italic"
        android:autofillHints="" tools:targetApi="o" />


    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword|number"
        android:padding="15sp"
        android:textColor="@color/cart_button"
        android:textColorHint="@color/cart_button"
        android:textSize="14sp"
        android:textStyle="italic"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:padding="15sp"
        android:textColor="@color/cart_button"
        android:textColorHint="@color/cart_button"
        android:textSize="14sp"
        android:textStyle="italic"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15sp"
        android:text="@string/register"

        android:textColor="@color/cart_ar"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15sp"
        android:text="@string/already_registered_log_in"
        android:textAlignment="center"
        android:textColor="@color/cart_bt"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


</LinearLayout>