<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cowritecar"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_correct_email"
        android:inputType="textEmailAddress"
        android:padding="15sp"
        android:textColor="@color/cart_button"
        android:textColorHint="@color/cart_button"
        android:textSize="14sp"
        android:textStyle="italic"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword|number"
        android:padding="15sp"
        android:textColor="@color/cart_button"
        android:textColorHint="@color/cart_button"
        android:textSize="14sp"
        android:textStyle="italic"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15sp"
        android:text="@string/L"
        android:textColor="@color/cart_ar"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15sp"
        android:text="@string/not_registered_register"
        android:textAlignment="center"
        android:textColor="@color/cart_bt"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="10dp"
        android:padding="15sp"
        android:textAlignment="center"
        android:textColor="@color/cart_bt"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


</LinearLayout>